--- a/Intro-to-web-dev/css-project/news.css
+++ b/Intro-to-web-dev/css-project/news.css
@@ -8,18 +8,20 @@ img {
 
 .page {
     display: grid;
-    margin: 2.5%;
+    margin: 2%;
     grid-template-areas: 
-    ".          brand-header    ."
-    "links      links           links"
-    "story-1    story-2         story-3"
-    "story-4    story-5         story-5";
+    "brand-header       brand-header        brand-header"
+    "links              links               links"
+    "story-1            story-2             story-3"
+    "story-4            story-5             story-5";
 }
 
 .brand-header {
     grid-area: brand-header;
     display: flex;
     justify-content: center;
+    font-size: 40px;
+    font-weight: normal;
 }
 
 .nav-links {
@@ -86,6 +88,7 @@ img {
 
 .article-title {
     font-size: 30px;
+    font-weight: normal;
     font-style: italic;
     text-align: center;
 }
