--- a/Intro-to-web-dev/word-masters-project/style.css
+++ b/Intro-to-web-dev/word-masters-project/style.css
@@ -8,7 +8,7 @@ nav {
     height: 10vh;
     justify-content: space-around;
     align-items: center;
-    margin: 0;
+    margin-bottom: 5vh;
     padding: 0;
     font-size: large;
     border-bottom: 4px solid black;
@@ -17,7 +17,7 @@ nav {
 .board-grid {
     background-color: aliceblue;
     display: grid;
-    gap: 4px;
+    gap: 1rem;
     justify-content: center;
     align-items: center;
     grid-template-areas: 
@@ -33,8 +33,9 @@ nav {
     align-items: center;
     text-align: center;
     background-color: aqua;
-    width: 100px;
-    height: 100px;
+    width: 60px;
+    height: 60px;
+    border: none;
 }
 
 .l1 {
