--- a/Intro-to-web-dev/word-masters-project/style.css
+++ b/Intro-to-web-dev/word-masters-project/style.css
@@ -35,7 +35,7 @@ nav {
     background-color: aqua;
     width: 60px;
     height: 60px;
-    border: none;
+    border: solid grey 4px;
 }
 
 .l1 {
