--- a/Intro-to-web-dev/word-masters-project/style.css
+++ b/Intro-to-web-dev/word-masters-project/style.css
@@ -4,11 +4,13 @@
 
 nav {
     display: flex;
-    width: 100%;
+    /* width: 100%; */
     height: 10vh;
     justify-content: space-around;
     align-items: center;
     margin-bottom: 5vh;
+    margin-left: 38%;
+    margin-right: 38%;
     padding: 0;
     font-size: large;
     border-bottom: 4px solid black;
@@ -25,13 +27,23 @@ nav {
     "l6 l7 l8 l9 l10"
     "l11 l12 l13 l14 l15"
     "l16 l17 l18 l19 l20"
-    "l21 l22 l23 l24 l25";
+    "l21 l22 l23 l24 l25"
+    "l26 l27 l28 l29 l30";
 }
 
 .letter {
     display: flex;
     align-items: center;
     text-align: center;
+    background-color: rgba(0, 255, 255, 0);
+    border: none;
+    width: 100%;
+    height: 100%;
+    
+    /* border: solid grey 4px; */
+}
+
+.letter-wrapper {
     background-color: aqua;
     width: 60px;
     height: 60px;
@@ -136,4 +148,24 @@ nav {
 
 .l25 {
     grid-area: l25;
+}
+
+.l26 {
+    grid-area: l26;
+}
+
+.l27 {
+    grid-area: l27;
+}
+
+.l28 {
+    grid-area: l28;
+}
+
+.l29 {
+    grid-area: l29;
+}
+
+.l30 {
+    grid-area: l30;
 }
