--- a/Intro-to-web-dev/word-masters-project/style.css
+++ b/Intro-to-web-dev/word-masters-project/style.css
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    font-family: 'Open Sans', sans-serif;
 }
 
 nav {
@@ -9,15 +10,18 @@ nav {
     justify-content: space-around;
     align-items: center;
     margin-bottom: 5vh;
-    margin-left: 38%;
-    margin-right: 38%;
+    /* margin-left: 38%; */
+    /* margin-right: 38%; */
     padding: 0;
-    font-size: large;
-    border-bottom: 4px solid black;
+    /* padding-bottom: 5vh; */
+    font-family: 'Open Sans', sans-serif;
+    font-size: 40px;
+    font-weight: bold;
+    border-bottom: 3px solid black;
 }
 
 .board-grid {
-    background-color: aliceblue;
+    /* background-color: aliceblue; */
     margin-top: 10vh;
     display: grid;
     gap: 1rem;
@@ -40,15 +44,29 @@ nav {
     border: none;
     width: 100%;
     height: 100%;
-    
+    font-size: 32px;
+    text-transform: uppercase;
     /* border: solid grey 4px; */
 }
 
 .letter-wrapper {
-    background-color: aqua;
+    background-color: aliceblue;
     width: 60px;
     height: 60px;
     border: solid grey 4px;
+}
+
+.invalid {
+    animation: flash 1s;
+}
+
+@keyframes flash {
+    5% {
+        border-color: crimson;
+    }
+    100% {
+        border-color: #ccc;
+    }
 }
 
 .loading-screen {
@@ -76,6 +94,50 @@ nav {
         transform: rotate(360deg);
     }
 }
+
+.winner {
+    animation: rainbow 4s infinite linear;
+  }
+
+@keyframes rainbow {
+    100%,
+    0% {
+      color: rgb(255, 0, 0);
+    }
+    8% {
+      color: rgb(255, 127, 0);
+    }
+    16% {
+      color: rgb(255, 255, 0);
+    }
+    25% {
+      color: rgb(127, 255, 0);
+    }
+    33% {
+      color: rgb(0, 255, 0);
+    }
+    41% {
+      color: rgb(0, 255, 127);
+    }
+    50% {
+      color: rgb(0, 255, 255);
+    }
+    58% {
+      color: rgb(0, 127, 255);
+    }
+    66% {
+      color: rgb(0, 0, 255);
+    }
+    75% {
+      color: rgb(127, 0, 255);
+    }
+    83% {
+      color: rgb(255, 0, 255);
+    }
+    91% {
+      color: rgb(255, 0, 127);
+    }
+  }
 
 .l1 {
     grid-area: l1;
