--- a/Intro-to-web-dev/word-masters-project/style.css
+++ b/Intro-to-web-dev/word-masters-project/style.css
@@ -1,12 +1,18 @@
 * {
     box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
+    color: white;
+
+}
+
+body {
+    background-color: darkslategrey;
 }
 
 nav {
     display: flex;
     /* width: 100%; */
-    height: 10vh;
+    height: 12vh;
     justify-content: space-around;
     align-items: center;
     margin-bottom: 5vh;
@@ -17,7 +23,7 @@ nav {
     font-family: 'Open Sans', sans-serif;
     font-size: 40px;
     font-weight: bold;
-    border-bottom: 3px solid black;
+    border-bottom: 3px solid darkcyan;
 }
 
 .board-grid {
@@ -50,7 +56,7 @@ nav {
 }
 
 .letter-wrapper {
-    background-color: aliceblue;
+    background-color: rgb(42, 48, 48);
     width: 60px;
     height: 60px;
     border: solid grey 4px;
@@ -93,6 +99,10 @@ nav {
     to {
         transform: rotate(360deg);
     }
+}
+
+.loser {
+    color: crimson;
 }
 
 .winner {
